# course-1

./: pyproject.toml
atividades/atividade_1/: aula_1.ipynb
aulas/: aula_1.ipynb
ferramentas/: plot.py
