[project]
name="ferramentas"
version="0.1"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = { file = "requirements.txt" }

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ferramentas"]
