[project]
name="ferramentas"
version="0.1"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "plotly",
  "scikit-learn",
  "scipy",
  "torch"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ferramentas"]
